--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,8 +65,14 @@ letter-spacing: 4px;
     width:100%;
     overflow: hidden;
 
+    position: relative;
+
 }
 
+#cover-text, #cover-text h2
+{
+    color: #fff;
+}
 
 #hero-image
 {
@@ -88,4 +94,25 @@ form{
 }
 to{
     transform:scale(1.1); }
+}
+#cover-text 
+{
+    font-size: 130%;
+    font-family: oswald, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+
+    width: 300px;
+    height: 200px;
+
+    padding-top: 40px;
+    padding-left: 10px;
+
+    background-color: rgba(241, 109, 107, .7);
+
+    bottom: 30px;
+    right: 150px;
+
+    position:absolute;
+
 }
