add background image for times section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,3 +204,11 @@ hr
     height: 100%;
     border-radius: 50%;
 }
+/*times events*/
+
+#times
+{
+    background: url(../images/dublin-city.webp) no-repeat center 100%;
+    background-size: cover;
+    overflow: hidden;
+}
