--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,105 +1,102 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Oswald|Lato:300');
 
 * {
     margin: 0;
     padding: 0;
-    border: none;
+    border: 0;
 }
+
 body {
     font-family: Lato, sans-serif;
-    font-weight: 300;
-    color:#3a3a3a;
+    color: #3a3a3a;
 }
 
+/* headings and logo */
 
-/* heading and logo */
-
-h1, h2 {
-    font-family: oswald, sans-serif;
+h1,
+h2 {
+    font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
     color: #252525;
 }
+
 #logo {
-    float:left;
+    float: left;
     font-size: 280%;
-    margin-left:30px;
+    margin-left: 30px;
 }
 
-/*navigation links */
+/* navigation links */
 
 #menu {
-font-size: 110%;
-letter-spacing: 4px;
-
+    font-size: 110%;
+    letter-spacing: 4px;
 }
 
-#menu, #logo {
+#logo,
+#menu {
     line-height: 75px;
 }
 
 #menu li {
-    float:right;
+    float: right;
     list-style-type: none;
     margin-right: 30px;
 }
+
 #menu a {
     text-decoration: none;
-    color:inherit;
+    color: inherit;
 }
-
 
 #menu a:hover {
     border-bottom: 1px solid #3a3a3a;
 }
 
-.active
-{
+.active {
     border-bottom: 1px solid #3a3a3a;
 }
 
-/*hero image*/
+/* Hero image and cover text */
 
-#hero-outer
-{
-    height: 600px;
-    width:100%;
-    overflow: hidden;
-
-    position: relative;
-
-}
-
-#cover-text, #cover-text h2
-{
-    color: #fff;
-}
-
-#hero-image
-{
+#hero-outer {
     height: 600px;
     width: 100%;
-    background: url('../images/hero-image.webp') no-repeat center center;
-
-/* animates zoom effect on loading page */
-animation-name:hero-zoom;
-animation-duration:5s;
-animation-fill-mode:forwards;
+    overflow: hidden;
+    position: relative;
 }
 
-/* creats the level of zoom for hero image */
+#hero-image {
+    height: 600px;
+    width: 100%;
+    background: url("https://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/main-image.png") no-repeat center center;
 
+    /* Animates zoom effect on loading the page */
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+
+/* Creates the level of zoom for hero image */
 @keyframes hero-zoom {
-form{
-    transform:scale(1);
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(1.1);
+    }
 }
-to{
-    transform:scale(1.1); }
+
+#cover-text,
+#cover-text h2 {
+    color: #ffffff;
 }
-#cover-text 
-{
+
+#cover-text {
     font-size: 130%;
-    font-family: oswald, sans-serif;
+    font-family: Oswald;
     text-transform: uppercase;
     letter-spacing: 4px;
 
@@ -114,47 +111,40 @@ to{
     bottom: 30px;
     right: 150px;
 
-    position:absolute;
+    position: absolute;
 
 }
 
-/* club ethos*/
+/* Club ethos */
 
-#club-ethos
-{
+#club-ethos {
     height: 600px;
 }
 
-#left-about
-{
+#left-about {
     padding-top: 30px;
     width: 33%;
     float: left;
 }
 
-
-#right-about
-{
+#right-about {
     padding-top: 30px;
     width: 33%;
     float: right;
-    
 }
-#center-about
-{
+
+#center-about {
     width: 33%;
     margin: 0 auto;
 }
 
-hr
-{
+hr {
     border-top: 1px solid #3a3a3a;
-    width:100%;
-    margin: 5px;
+    width: 100%;
+    margin: 5px 0;
 }
 
-.left-about-heading 
-{
+.left-about-heading {
     width: 60%;
     float: right;
     line-height: 20px;
@@ -162,59 +152,59 @@ hr
     margin-bottom: 50px;
 }
 
-.right-about-heading 
-{
+.right-about-heading {
     width: 60%;
     float: left;
     line-height: 20px;
     clear: both;
     margin-bottom: 50px;
 }
-.right-about-heading h2
-{
+
+.right-about-heading p {
     text-align: right;
 }
 
-.right-about-heading p
-{
-    text-align:right;
+.right-about-heading h2 {
+    text-align: right;
 }
-#welcome
-{
+
+/* Club ethos center image */
+
+#welcome {
+    margin: 20px 0;
     text-align: center;
-    margin: 20px;
     font-size: 280%;
 }
 
-#circle-container
-{
+#circle-container {
     width: 300px;
     height: 300px;
     padding: 30px;
     border-style: solid;
-    border-color: #ccc;
+    border-color: #cccccc;
     border-width: 1px;
     border-radius: 50%;
     margin: 0 auto;
 }
 
-#circle-cover-bg
-{
-    background: url(../images/ethos-center-image.jpg) no-repeat center center;
+#circle-cover-bg {
+    background: url("https://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/video-mask.png") no-repeat center center;
     height: 100%;
     border-radius: 50%;
 }
-/*times events*/
 
-#times
-{
-    background: url(../images/dublin-city.webp) no-repeat center 100%;
+/* Event times */
+
+#times {
+    background-image: url("https://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/dublin-city.png");
+    background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+    width: 100%;
     overflow: hidden;
 }
 
-#times div
-{
+#times div {
     color: #fafafa;
     background-color: rgba(0, 0, 0, .6);
     width: 20%;
@@ -225,89 +215,145 @@ hr
     border: 2px solid white;
     box-sizing: border-box;
 }
-#times h2
-{
+
+#times h2 {
     color: #fafafa;
 }
-/* footer */
 
-footer 
-{
+/* Footer */
+
+footer {
     height: 150px;
 }
 
-.social-networks
-{
+.social-networks {
     text-align: center;
+
 }
 
-.social-networks > li
-{
+.social-networks li {
     display: inline;
 }
-.social-networks i
-{
+
+.social-networks i {
     font-size: 160%;
     margin: 1%;
     padding: 5%;
     color: #3a3a3a;
 }
 
-/* Gallery */
+/* Gallery Photos */
 
-#photos
-{
+#photo {
     clear: both;
     line-height: 0;
     column-count: 4;
-    column-gap: 0;
+    column-gap: 0px;
 }
-#photos > img
-{
+
+#photo img {
     width: 100%;
+}
+
+/* Form */
+
+.form-section {
+    clear: left;
+    background: url("https://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/formbg.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 900px;
+}
+
+.signup-form {
+    margin: 150px 10% 0 0;
+    color: #fff;
+    background-color: rgba(60, 60, 60, 0.6);
+    max-width: 400px;
+    position: absolute;
+    left: 10%;
+    padding: 30px;
+}
+
+.signup-form>h2 {
+    color: #fafafa;
+    margin-bottom: 20px;
+}
+
+.text-input {
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+}
+
+.text-input:hover {
+    border-color: #f16c6b;
+}
+
+.join-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px 15px 32px;
+    text-align: center;
+    font-size: 100%;
+    background-color: #f16c6b;
+    color: #fafafa;
+    display: block;
+}
+
+.join-button:hover {
+    background-color: #fafafa;
+    color: #f16c6b;
 }
 
 /* Media queries */
 
-/* For larger to medium screen size from 1200px wide and down */
-
+/* For large to medium screens sizes from 1200px wide and down */
 @media screen and (max-width: 1200px) {
     #club-ethos {
         width: 65%;
         height: 1200px;
-        margin:0 auto;
-
+        margin: 0 auto;
     }
 
     #welcome {
         padding: 30px 0;
-        margin: 0;
+        margin-top: 0;
     }
-    #left-about, #right-about {
+
+    #left-about,
+    #right-about {
         width: 100%;
         float: left;
         padding: 0;
     }
+
     #center-about {
         clear: both;
-        width:100%;
+        width: 100%;
         float: left;
         padding: 0;
     }
 
-    #times > div {
+    #times div {
         width: 100%;
         clear: both;
         height: 150px;
         padding: 0;
     }
+
     hr {
         display: none;
     }
 }
 
-/* For medium screen sizes from 950px wide and down */
-@media screen and (max-width:950px) {
+/* For medium screens sizes from 950px wide and down */
+@media screen and (max-width: 950px) {
+
     #menu {
         clear: left;
         float: left;
@@ -315,6 +361,7 @@ footer
         margin-bottom: 20px;
         line-height: 25px;
     }
+
     #cover-text {
         left: 0;
     }
@@ -324,26 +371,32 @@ footer
         height: 1200px;
         margin: 0 auto;
     }
-    .left-about-heading, .right-about-heading {
+
+    .left-about-heading,
+    .right-about-heading {
         width: inherit;
     }
-    .left-about-heading h2, .right-about-heading h2 {
+
+    .left-about-heading h2,
+    .right-about-heading h2 {
         width: 100%;
         text-align: center;
     }
-    .left-about-heading p, .right-about-heading p {
+
+    .left-about-heading p,
+    .right-about-heading p {
         text-align: center;
-        padding: 0 20px;
+        padding: 0 20px 0 20px;
     }
-    #photos {
+
+    #photo {
         column-count: 3;
     }
 }
-/* For small screen sizes 800px and down */
 
-@media screen and (max-width:800px) {
-    #photos {
+/* For small screens sizes from 800px wide and down */
+@media screen and (max-width: 800px) {
+    #photo {
         column-count: 2;
     }
-    
 }
